cmake_minimum_required(VERSION 3.10)
set(AES_SRC "../../src/aes.c")
set(LIBRARY_OUTPUT_PATH ../../libs)
include_directories(../../include)
add_compile_options(-fPIC)
add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
add_definitions(-std=c++11)
add_library(aes SHARED ${AES_SRC})
set_target_properties(aes PROPERTIES CLEAN_DIRECT_OUTPUT 1)
##set_target_properties(log PROPERTIES VERSION 1.0 SOVERSION 1)
install(TARGETS aes LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})
add_library(aes_static STATIC ${AES_SRC})
set_target_properties(aes_static PROPERTIES OUTPUT_NAME aes)
set_target_properties(aes_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
install(TARGETS aes_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})
############
############

#set(MAIN_TEST_SRC "../../src/main_test.cpp")
#add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
#add_definitions(-std=c++11)
#add_definitions(-DINFO)
#include_directories(../../include)
#link_directories(../../libs)
#link_libraries(liblog.a)
#add_executable(main_test ${MAIN_TEST_SRC})